--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,12 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#161616" />
+    <meta property="og:title"       content="nobux42">
+    <meta property="og:description" content="nobux42's Portfolio Site">
+    <meta property="og:url"         content="https://nobux42.com">
+    <meta property="og:image"       content="/ogp.png">
+    <meta name="twitter:card"       content="summary">
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
